# sential-8001

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: agent_registration.json  model_routing.yaml  risk_policy.yaml
scripts/: bootstrap_memory.py  claim_sandbox_capital.py  prepare_data.py  register_agent.py  simulator.py
src/: llm_client.py  models.py
src/agents/: auditor_agent.py  risk_manager.py  strategy_agent.py
src/core/: aerodrome_worker.py  base_worker.py  kraken_worker.py  orchestrator.py
src/onchain/: identity.py  reputation.py  risk_router.py  signing.py  validator.py  wallet.py
src/processing/: cleaner.py  embedder.py  indicators.py
src/rag/: retriever.py  vector_store.py
tests/red_team/: adversarial_agent.py
